--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -256,6 +256,7 @@
     <string name="navigation_drawer_close">Close navigation drawer</string>
 
     <string name="action_settings">Settings</string>
+    <string name="logout">Logout</string>
     <string name="title_activity_item">ItemActivity</string>
     <string name="title_activity_checkout">CheckoutActivity</string>
 </resources>
