--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,5 @@
 <resources>
+    <string name="coba">hehe</string>
     <string-array name="CountryCodes">
         <item>93,AF</item>
         <item>355,AL</item>
